pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: csi-s3-test-nginx
  namespace: default
spec:
  containers:
   - name: csi-s3-test-nginx
     image: nginx:latest
     volumeMounts:
       - mountPath: /data
         name: data
  volumes:
   - name: data
     persistentVolumeClaim:
       claimName: csi-s3-pvc
       readOnly: false
