deploy-nginx-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-exporter
  template:
    metadata:
      labels:
        app: nginx-exporter
    spec:
      containers:
        - name: nginx-exporter
          image: rybnovn/nginx:1.3
          ports:
            - containerPort: 9113
              name: http 
            



---

apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
spec:
  selector:
    app: nginx-exporter
  ports:
    - protocol: TCP
      port: 9113
      targetPort: 9113
      name: http
