service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: web
  labels:
    app.kubernetes.io/name: web
spec:
  ports:
    - port: 8000
      targetPort: 8000      
  selector:
    app.kubernetes.io/name: web
  type: ClusterIP
